tests/paczka1/fuzzy1/26306528.err
Error in line 1: GCme A235 66,98
Error in line 5: A159A23547,2
Error in line 9: Vu652Ph A159 94,9
Error in line 7: NWIY05g750o A159 62,9
Error in line 4: A159 A235 10,8
Error in line 16: A159 S435 23,9
Error in line 17: NK0UBbTfmZe S435 88,1
Error in line 22: NK0UBbTfmZe A159 85,2
Error in line 11: Vu652Ph A235 49,3
Error in line 28: GCme S190 25,4
